# wx-accessible-grid

./: CONTRIBUTING.md  README.md  agentnotes.md  pyproject.toml
examples/: demo.py
spike/: grid_spike.py
src/wx_accessible_grid/: __init__.py  assets.py  grid.py  model.py  render.py
tests/: test_grid.py  test_model.py  test_render.py
