[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wx-accessible-grid"
version = "0.6.1"
description = "An accessible data grid for wxPython built on a native virtual wx.ListCtrl, read directly by NVDA, JAWS, and VoiceOver with no WebView: instant population at any size, native row navigation, and native multi-select."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Taylor Arndt", email = "taylor@techopolisonline.com" },
  { name = "Community Access" },
]
maintainers = [
  { name = "Taylor Arndt", email = "taylor@techopolisonline.com" },
]
keywords = [
  "wxpython", "wxwidgets", "grid", "datagrid", "table", "listctrl", "native",
  "accessibility", "a11y", "screen-reader", "nvda", "jaws", "voiceover", "keyboard",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Adaptive Technologies",
  "Topic :: Software Development :: User Interfaces",
  "Intended Audience :: Developers",
]
dependencies = [
  "wxPython>=4.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Community-Access/wx-accessible-grid"

[tool.hatch.build.targets.wheel]
packages = ["src/wx_accessible_grid"]

[tool.ruff]
line-length = 100
target-version = "py310"
