[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wx-accessible-grid"
version = "0.7.0"
description = "An accessible data grid for wxPython built on a native wx.dataview.DataViewListCtrl (NSTableView on macOS, native list view on Windows/Linux), so VoiceOver, NVDA, and JAWS read the table, its rows, and each cell with no WebView."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Taylor Arndt", email = "taylor@techopolisonline.com" },
  { name = "Community Access" },
]
maintainers = [
  { name = "Taylor Arndt", email = "taylor@techopolisonline.com" },
]
keywords = [
  "wxpython", "wxwidgets", "grid", "datagrid", "table", "dataviewlistctrl",
  "native", "accessibility", "a11y", "screen-reader", "nvda", "jaws", "voiceover",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Adaptive Technologies",
  "Topic :: Software Development :: User Interfaces",
  "Intended Audience :: Developers",
]
dependencies = [
  "wxPython>=4.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Community-Access/wx-accessible-grid"

[tool.hatch.build.targets.wheel]
packages = ["src/wx_accessible_grid"]

[tool.ruff]
line-length = 100
target-version = "py310"
